restyle buttons and minor fixes on aligning items

--- a/src/Project.scss
+++ b/src/Project.scss
@@ -1,9 +1,18 @@
 .project-icon{
 	width:100px;
-	height:100px;
+	height:100px;	
 }
 
 .project-menu{
 	display: flex;
 	justify-content: center;
+	font-size: 1rem;
+}
+
+button{
+	outline: inherit;
+	outline-style: none;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
 }
